--- a/KomisjaWyborcza/public/scripts/app/css/style.css
+++ b/KomisjaWyborcza/public/scripts/app/css/style.css
@@ -40,7 +40,7 @@ body {
 
 
     font-family: 'Open Sans', sans-serif;
-    background: url('/images/orzel_tlo.png') right 400px no-repeat;
+    /*background: url('/images/orzel_tlo.png') right 400px no-repeat;*/
     background-size:13% auto;
 }
 
